# Point-Cloud-Registration-API

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: source_correspondence.txt  target_correspondence.txt
example/: CMakeLists.txt  example_bisecting_linear_line_complex_registration.cpp  example_distance_geometry_registration.cpp
registration/: CMakeLists.txt
registration/include/: bisecting_linear_line_complex_registration.h  distance_geometry_registration.h  eigen_utils.h  point_cloud_registration.h  point_cloud_utils.h
registration/src/: bisecting_linear_line_complex_registration.cpp  distance_geometry_registration.cpp  eigen_utils.cpp  point_cloud_registration.cpp  point_cloud_utils.cpp
script/: install_pcl1.7.sh
